fix: Align response component

--- a/text_matching_xblock/text_matching_xblock/static/css/matching/matching_zone.css
+++ b/text_matching_xblock/text_matching_xblock/static/css/matching/matching_zone.css
@@ -27,7 +27,7 @@
 }
 
 .prompt-wrapper p {
-   margin-bottom: 0;
+   margin-bottom: 0 !important;
 }
 
 .btn-reset-response {
