--- a/text_matching_xblock/text_matching_xblock/static/css/text_matching_xblock.css
+++ b/text_matching_xblock/text_matching_xblock/static/css/text_matching_xblock.css
@@ -12,6 +12,10 @@
     padding: 0 10px;
 }
 
+.answer-wrapper > p {
+    margin-bottom: 0 !important;
+}
+
 .choice_incorrect {
     border: 2px solid #b20610 !important;
 }
